dsp_admin/roles/dadmin/files/dadmin-fi01/iptables
# Generated by iptables-save v1.6.0 on Mon May  7 16:45:30 2018
*filter
:INPUT DROP [29572:1831546]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [81:5749]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
:DOCKER-USER - [0:0]
:ufw-after-forward - [0:0]
:ufw-after-input - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-output - [0:0]
:ufw-before-forward - [0:0]
:ufw-before-input - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-output - [0:0]
:ufw-logging-allow - [0:0]
:ufw-logging-deny - [0:0]
:ufw-not-local - [0:0]
:ufw-reject-forward - [0:0]
:ufw-reject-input - [0:0]
:ufw-reject-output - [0:0]
:ufw-skip-to-policy-forward - [0:0]
:ufw-skip-to-policy-input - [0:0]
:ufw-skip-to-policy-output - [0:0]
:ufw-track-forward - [0:0]
:ufw-track-input - [0:0]
:ufw-track-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-user-input - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-output - [0:0]
-A INPUT -i eno1 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 157.14.149.71/32 -p tcp -j LOG --log-prefix "[GeoLogic]" --log-level 6
-A INPUT -s 202.210.134.176/28 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 192.168.134.0/24 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 113.43.85.162/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 113.43.140.58/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 153.139.229.160/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 58.158.34.210/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 113.32.201.10/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 113.43.141.70/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 211.9.56.89/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 125.100.150.130/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 180.131.119.243/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 157.14.209.172/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 221.250.106.42/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 202.210.134.176/28 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 192.168.134.0/24 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 113.43.85.162/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 113.43.140.58/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 153.139.229.160/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 58.158.34.210/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 113.32.201.10/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 113.43.141.70/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 211.9.56.89/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 125.100.150.130/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 180.131.119.243/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 157.14.209.172/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 202.94.157.14/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 221.250.106.42/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 202.210.134.176/28 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 192.168.134.0/24 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 113.43.85.162/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 113.43.140.58/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 153.139.229.160/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 58.158.34.210/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 113.32.201.10/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 113.43.141.70/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 211.9.56.89/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 125.100.150.130/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 180.131.119.243/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 157.14.209.172/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 202.94.157.14/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 113.43.85.162/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 3690 -j ACCEPT
-A INPUT -s 113.43.140.58/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 3690 -j ACCEPT
-A INPUT -s 153.139.229.160/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 3690 -j ACCEPT
-A INPUT -s 58.158.34.210/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 3690 -j ACCEPT
-A INPUT -s 113.32.201.10/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 3690 -j ACCEPT
-A INPUT -s 113.43.141.70/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 3690 -j ACCEPT
-A INPUT -s 211.9.56.89/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 3690 -j ACCEPT
-A INPUT -s 125.100.150.130/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 3690 -j ACCEPT
-A INPUT -s 180.131.119.24/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 3690 -j ACCEPT
-A INPUT -s 157.14.209.172/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 3690 -j ACCEPT
-A INPUT -s 49.212.132.107/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 3690 -j ACCEPT
-A INPUT -s 202.210.134.182/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 3690 -j ACCEPT
-A INPUT -s 113.34.111.157/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 3690 -j ACCEPT
-A INPUT -s 113.43.85.162/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 113.43.140.58/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 153.139.229.160/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 58.158.34.210/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 113.32.201.10/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 113.43.141.70/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 211.9.56.89/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 125.100.150.130/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 180.131.119.24/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 157.14.209.172/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 180.131.119.243/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 202.94.157.14/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 221.250.106.42/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 113.43.85.162/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 8081 -j ACCEPT
-A INPUT -s 113.43.140.58/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 8081 -j ACCEPT
-A INPUT -s 153.139.229.160/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 8081 -j ACCEPT
-A INPUT -s 58.158.34.210/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 8081 -j ACCEPT
-A INPUT -s 113.32.201.10/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 8081 -j ACCEPT
-A INPUT -s 113.43.141.70/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 8081 -j ACCEPT
-A INPUT -s 211.9.56.89/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 8081 -j ACCEPT
-A INPUT -s 125.100.150.130/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 8081 -j ACCEPT
-A INPUT -s 180.131.119.24/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 8081 -j ACCEPT
-A INPUT -s 157.14.209.172/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 8081 -j ACCEPT
-A INPUT -s 180.131.119.243/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 8081 -j ACCEPT
-A INPUT -s 202.94.157.14/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 8081 -j ACCEPT
-A INPUT -s 221.250.106.42/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 8081 -j ACCEPT
-A INPUT -s 54.249.38.32/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 157.14.149.71/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 157.14.149.71/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 180.190.188.140/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 180.190.188.140/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 222.127.227.15/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 222.127.227.15/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 122.52.128.233/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 122.52.128.233/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 203.177.247.187/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 203.177.247.187/32 -d 202.131.200.112/32 -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p vrrp -m state --state NEW -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i eno1 -j REJECT --reject-with icmp-port-unreachable
-A INPUT -j ufw-before-logging-input
-A INPUT -j ufw-before-input
-A INPUT -j ufw-after-input
-A INPUT -j ufw-after-logging-input
-A INPUT -j ufw-reject-input
-A INPUT -j ufw-track-input
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o br-1e7b12832cd8 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-1e7b12832cd8 -j DOCKER
-A FORWARD -i br-1e7b12832cd8 ! -o br-1e7b12832cd8 -j ACCEPT
-A FORWARD -i br-1e7b12832cd8 -o br-1e7b12832cd8 -j ACCEPT
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -j ufw-before-logging-forward
-A FORWARD -j ufw-before-forward
-A FORWARD -j ufw-after-forward
-A FORWARD -j ufw-after-logging-forward
-A FORWARD -j ufw-reject-forward
-A FORWARD -j ufw-track-forward
-A OUTPUT -j ufw-before-logging-output
-A OUTPUT -j ufw-before-output
-A OUTPUT -j ufw-after-output
-A OUTPUT -j ufw-after-logging-output
-A OUTPUT -j ufw-reject-output
-A OUTPUT -j ufw-track-output
-A DOCKER -d 172.18.0.7/32 ! -i br-1e7b12832cd8 -o br-1e7b12832cd8 -p tcp -m tcp --dport 443 -j ACCEPT
-A DOCKER-ISOLATION -i docker0 -o br-1e7b12832cd8 -j DROP
-A DOCKER-ISOLATION -i br-1e7b12832cd8 -o docker0 -j DROP
-A DOCKER-ISOLATION -j RETURN
-A DOCKER-USER -j RETURN
-A ufw-after-input -p udp -m udp --dport 137 -j ufw-skip-to-policy-input
-A ufw-after-input -p udp -m udp --dport 138 -j ufw-skip-to-policy-input
-A ufw-after-input -p tcp -m tcp --dport 139 -j ufw-skip-to-policy-input
-A ufw-after-input -p tcp -m tcp --dport 445 -j ufw-skip-to-policy-input
-A ufw-after-input -p udp -m udp --dport 67 -j ufw-skip-to-policy-input
-A ufw-after-input -p udp -m udp --dport 68 -j ufw-skip-to-policy-input
-A ufw-after-input -m addrtype --dst-type BROADCAST -j ufw-skip-to-policy-input
-A ufw-after-logging-forward -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK] "
-A ufw-after-logging-input -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK] "
-A ufw-before-forward -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 4 -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 12 -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A ufw-before-forward -j ufw-user-forward
-A ufw-before-input -i lo -j ACCEPT
-A ufw-before-input -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-input -m conntrack --ctstate INVALID -j ufw-logging-deny
-A ufw-before-input -m conntrack --ctstate INVALID -j DROP
-A ufw-before-input -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A ufw-before-input -p icmp -m icmp --icmp-type 4 -j ACCEPT
-A ufw-before-input -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A ufw-before-input -p icmp -m icmp --icmp-type 12 -j ACCEPT
-A ufw-before-input -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A ufw-before-input -p udp -m udp --sport 67 --dport 68 -j ACCEPT
-A ufw-before-input -j ufw-not-local
-A ufw-before-input -d 224.0.0.251/32 -p udp -m udp --dport 5353 -j ACCEPT
-A ufw-before-input -d 239.255.255.250/32 -p udp -m udp --dport 1900 -j ACCEPT
-A ufw-before-input -j ufw-user-input
-A ufw-before-output -o lo -j ACCEPT
-A ufw-before-output -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-output -j ufw-user-output
-A ufw-logging-allow -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW ALLOW] "
-A ufw-logging-deny -m conntrack --ctstate INVALID -m limit --limit 3/min --limit-burst 10 -j RETURN
-A ufw-logging-deny -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK] "
-A ufw-not-local -m addrtype --dst-type LOCAL -j RETURN
-A ufw-not-local -m addrtype --dst-type MULTICAST -j RETURN
-A ufw-not-local -m addrtype --dst-type BROADCAST -j RETURN
-A ufw-not-local -m limit --limit 3/min --limit-burst 10 -j ufw-logging-deny
-A ufw-not-local -j DROP
-A ufw-skip-to-policy-forward -j DROP
-A ufw-skip-to-policy-input -j DROP
-A ufw-skip-to-policy-output -j ACCEPT
-A ufw-track-output -p tcp -m conntrack --ctstate NEW -j ACCEPT
-A ufw-track-output -p udp -m conntrack --ctstate NEW -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 22 -j ACCEPT
-A ufw-user-input -p udp -m udp --dport 22 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 22 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 80 -j ACCEPT
-A ufw-user-input -p udp -m udp --dport 80 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 443 -j ACCEPT
-A ufw-user-input -p udp -m udp --dport 443 -j ACCEPT
-A ufw-user-limit -m limit --limit 3/min -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT --reject-with icmp-port-unreachable
-A ufw-user-limit-accept -j ACCEPT
COMMIT
# Completed on Mon May  7 16:45:30 2018
# Generated by iptables-save v1.6.0 on Mon May  7 16:45:30 2018
*nat
:PREROUTING ACCEPT [25206704:1573874491]
:INPUT ACCEPT [99654:6397979]
:OUTPUT ACCEPT [549636:35309699]
:POSTROUTING ACCEPT [800352:50575323]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.18.0.0/16 ! -o br-1e7b12832cd8 -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.18.0.7/32 -d 172.18.0.7/32 -p tcp -m tcp --dport 443 -j MASQUERADE
-A DOCKER -i br-1e7b12832cd8 -j RETURN
-A DOCKER -i docker0 -j RETURN
-A DOCKER ! -i br-1e7b12832cd8 -p tcp -m tcp --dport 4430 -j DNAT --to-destination 172.18.0.7:443
COMMIT
# Completed on Mon May  7 16:45:30 2018
